2006-04-05  Bruno coudoin  <bruno.coudoin@free.fr>

	Code cleanup, tracking memory leaks.
	Especially magic_hat no more requires a lot of memory, removed double image loading.

	* src/boards/clockgame.c: (display_hour), (display_minute),
	(display_second), (clockgame_create_item):
	* src/boards/crane.c: (draw_redhands), (draw_frame):
	* src/boards/magic_hat.c: (magic_hat_create_item), (draw_frame),
	(draw_table), (draw_hat), (place_item), (item_event), (nb_list),
	(move_stars), (smooth_move):
	* src/boards/target.c: (display_windspeed):

2006-04-04  Bruno coudoin  <bruno.coudoin@free.fr>

	Fix by Slava. Set the sqlite library to the linking of libgcompris instead of the
	binary.

	* src/gcompris/Makefile.am:

2006-04-04  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixed several small memory leaks.	    

	* src/boards/awele.c: (awele_next_level):
	* src/boards/chess.c: (chess_next_level):
	* src/boards/clockgame.c: (start_board):
	* src/boards/crane.c: (start_board):
	* src/boards/draw.c: (start_board):
	* src/boards/erase.c: (erase_create_item):
	* src/boards/fifteen.c: (fifteen_next_level):
	* src/boards/leftright.c: (start_board):
	* src/boards/magic_hat.c: (start_board):
	* src/boards/maze.c: (start_board):
	* src/boards/missingletter.c: (start_board):
	* src/boards/money.c: (money_next_level):
	* src/boards/reading.c: (start_board):
	* src/boards/shapegame.c: (start_board):
	* src/boards/traffic.c: (start_board):
	* src/boards/wordprocessor.c: (start_board):
	* src/gcompris/gameutil.c: (gcompris_board_has_activity),
	(gcompris_get_menulist), (gcompris_dialog):

2006-03-31  Yves Combe  <yves@ycombe.net>

	Stupid bug in substracion memory (typo).

	* src/boards/memory.c: (get_random_token), (start_board):

2006-03-30  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixes unexpected empty menu on windows (untested)

	* src/gcompris/board.c: (init_plugins):
	* src/gcompris/gameutil.c: (gcompris_board_has_activity),
	(gcompris_get_menulist):
